--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ matplotlib==3.4.2
 networkx==2.5.1
 numpy==1.20.3
 onnxruntime==1.7.0
-opencv-python-headless==4.5.2.52
+opencv-python-headless
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
