--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ matplotlib==3.4.2
 networkx==2.5.1
 numpy==1.20.3
 onnxruntime==1.7.0
+opencv-python
 opencv-python-headless
 parso==0.7.1
 pexpect==4.8.0
