--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit
 skia-python
 opencv-python
 opencv-python-headless
+opencv-contrib-python
 albumentations==1.1.0
 onnxruntime==1.11.1
 numpy
